Set button font color to black so deployments on iphone are correct

--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,7 @@ p {
 }
 
 .btn {
+    color: black;
     margin: 20px;
     width: 200px;
     height: 75px;
